--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -53,9 +53,6 @@
                 >Notifikace</a
               >
             </li>
-            <li>
-              <a class="dropdown-item" href="/admin/categories">Předměty</a>
-            </li>
           </ul>
         </li>
         <% } %>
@@ -68,10 +65,7 @@
                   <a class="nav-link" href="/about">O projektu</a>
                 </li>-->
         <li class="nav-item">
-          <a class="nav-link" href="/clash/soubojfakult"
-            >Souboj fakult
-            <!--<span class="badge rounded-pill bg-danger">New</span>--></a
-          >
+          <a class="nav-link" href="/category/dashboard">Předměty</a>
         </li>
         <% if (currentUser) { %>
         <li class="nav-item">
