--- a/views/home.ejs
+++ b/views/home.ejs
@@ -284,6 +284,68 @@
           </div>
         </div>
       </div>
+
+      <div class="album pb-3 mb-5">
+        <div class="container">
+          <div class="col-md-10 offset-md-1">
+              <h1 class="mb-5 text-center">
+                Sdílené předměty
+              </h1>
+          </div>
+          <div class="row" id="categories-row">
+            <div class="offset-lg-2 col-lg-8">
+              <div class="row">
+                <% if(!sharedCategories || sharedCategories.length === 0) { %>
+                <div class="col-12 mb-4 text-center">
+                  <h5 class="text-center mb-0 text-muted">
+                        Zatím nemáš žádné sdílené předměty
+                      </h5>
+                </div>
+                <% } else { %>
+                  <% sharedCategories.forEach(cat => { %>
+                  <div class="col-lg-3 col-md-4 col-6 mb-4">
+                    <a href="/category/<%= cat._id %>" class="landing-link">
+                      <div class="card">
+                        <div class="d-flex justify-content-center">
+                          <div
+                            class="m-3 rounded-circle icon-background-landing d-flex justify-content-center align-items-center"
+                          >
+                            <img
+                              src="/img/<%= cat.icon %>"
+                              class="img-fit"
+                              alt=""
+                            />
+                          </div>
+                        </div>
+                        <div
+                          class="card-body cat-text d-flex flex-column justify-content-between"
+                        >
+                          <h5 class="card-title"><%= cat.text %></h5>
+                          <div>
+                            <p class="text-muted">
+                              <%= cat.numOfCards %> <%= texts.landingPage.cards %>
+                              <br />
+                              <span class="text-small"
+                                ><%= cat.numOfQuestions %> otázek</span
+                              >
+                            </p>
+                            <a
+                              href="/category/<%= cat._id %>"
+                              class="btn btn-sm btn-danger"
+                              ><%= texts.landingPage.study %></a
+                            >
+                          </div>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                  <% }) %>
+                <% } %>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <% if (currentUser) { %>
