--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -524,6 +524,16 @@ form .form-borders {
   margin: 5px 0;
 }
 
+.question-mark-box {
+  background-color: #eeeeee;
+  border-radius: 50px;
+  cursor: help;
+  padding: 2px 6px;
+  font-size: 10px;
+  margin-bottom: 2px;
+  margin-left: 2px;
+}
+
 /* COOKIES */
 
 .cookies-warning {
