--- a/views/auth/activity.ejs
+++ b/views/auth/activity.ejs
@@ -1,92 +1,110 @@
 <% layout('layouts/boilerplate.ejs') %>
 <div class="container">
-    <div class="row">
-        <div class="col-lg-8 offset-lg-2">
-            <div class="card">
-                <div class="row p-3">
-                    <div class="col-12 d-flex align-items-center">
-                        <div class="rounded-circle icon-background d-flex justify-content-center align-items-center">
-                            <img src="/img/icon_book.png" class="img-fit" alt="">
-                        </div>
-                        <h3 class="px-3">Má aktivita</h3>
-                    </div>
-                </div>
+  <div class="row">
+    <div class="col-lg-8 offset-lg-2">
+      <div class="card">
+        <div class="row p-3">
+          <div class="col-12 d-flex align-items-center">
+            <div
+              class="rounded-circle icon-background d-flex justify-content-center align-items-center"
+            >
+              <img src="/img/icon_book.png" class="img-fit" alt="" />
             </div>
+            <h3 class="px-3">Má aktivita</h3>
+          </div>
         </div>
+      </div>
     </div>
-    <div class="row mt-3">
-        <!-- If there are no results -->
-        <% if (allResults.length === 0) { %>
-            <div class="container mt-3">
-                <div class="row">
-                    <div class="col-lg-8 offset-lg-2 d-flex justify-content-center">
-                        <p class="text-muted">Zatím nemáš žádnou aktivitu.</p>
-                    </div>
+  </div>
+  <div class="row mt-3">
+    <!-- If there are no results -->
+    <% if (allResults.length === 0) { %>
+    <div class="container mt-3">
+      <div class="row">
+        <div class="col-lg-8 offset-lg-2 d-flex justify-content-center">
+          <p class="text-muted">Zatím nemáš žádnou aktivitu.</p>
+        </div>
+      </div>
+    </div>
+    <% } else { %>
+    <!-- Display results in a styled list -->
+    <% allResults.forEach(result => { %>
+    <div class="container mt-3">
+      <div class="row">
+        <div class="col-lg-8 offset-lg-2">
+          <div class="card px-3 py-2">
+            <div
+              class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center"
+            >
+              <!-- Left section: Type and category/section -->
+              <div class="d-flex align-items-center">
+                <div
+                  class="rounded-circle icon-background d-flex justify-content-center align-items-center"
+                  style="min-width: 3.5rem"
+                >
+                  <% if (result.type === "test") { %>
+                  <img class="img-fit" src="/img/icon_quiz.png" alt="" />
+                  <% } else { %>
+                  <img class="img-fit" src="/img/icon_cards.png" alt="" />
+                  <% } %>
                 </div>
-            </div>
-        <% } else { %>
-            <!-- Display results in a styled list -->
-                <% allResults.forEach(result => { %>
-                    <div class="container mt-3">
-                        <div class="row">
-                            <div class="col-lg-8 offset-lg-2">
-                                <div class="card px-3 py-2">
-                                    <div class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center">
-                                        <!-- Left section: Type and category/section -->
-                                        <div class="d-flex align-items-center">
-                                            <div class="rounded-circle icon-background d-flex justify-content-center align-items-center" style="min-width: 3.5rem;">
-                                                <% if (result.type === "test") { %>
-                                                    <img class="img-fit" src="/img/icon_quiz.png" alt="">
-                                                <% } else { %>
-                                                    <img class="img-fit" src="/img/icon_cards.png" alt="">
-                                                <% } %>
-                                                
-                                            </div>
-                                            <div class="px-3">
-                                                <p class="mb-0">
-                                                    <%= result.section && result.section.name  %>
-                                                    <% if (!result.section) { %>
-                                                        Shuffle <%= result.category.text %>
-                                                    <% } %>
-                                                </p>
-                                                <p class="text-muted text-tiny mb-0">
-                                                    <span><%= result.category.text %> / </span>
-                                                    <span><%= result.type === 'test' ? 'Test' : 'Kartičky' %></span>
-                                                </p>
-                                                <p class="text-muted text-tiny mb-0">
-                                                    <span> <%= result.formattedDate  %></span>
-                                                </p>
-                                            </div>
-                                        </div>
+                <div class="px-3">
+                  <p class="mb-0">
+                    <%= result.section && result.section.name %> <% if
+                    (!result.section) { %> Shuffle <%= result.category?.text %>
+                    <% } %>
+                  </p>
+                  <p class="text-muted text-tiny mb-0">
+                    <span><%= result.category?.text %> / </span>
+                    <span
+                      ><%= result.type === 'test' ? 'Test' : 'Kartičky' %></span
+                    >
+                  </p>
+                  <p class="text-muted text-tiny mb-0">
+                    <span> <%= result.formattedDate %></span>
+                  </p>
+                </div>
+              </div>
 
-                                        <!-- Right section: Date -->
-                                        <div   class="mt-3 mb-2 mb-sm-0 mt-md-0 mx-auto mx-md-0 text-center text-md-end">
-                                            <% if (result.type === "cards") { %>
-                                                <% if (result.countTotal === 1) { %>
-                                                    <p class="badge rounded-pill badge-green-full mb-0"><%= result.countTotal %> kartička</p>
-                                                <% } else if (result.countTotal > 1 && result.countTotal < 5){ %>
-                                                    <p class="badge rounded-pill badge-green-full mb-0"><%= result.countTotal %> kartičky</p>
-                                                <% } else { %>
-                                                    <p class="badge rounded-pill badge-green-full mb-0"><%= result.countTotal %> kartiček</p>
-                                                <% } %>
-                                            <% } else { %>
-                                                <% if (result.percentage === 100) { %>
-                                                    <p class="badge rounded-pill badge-green-full mb-0">Úspěšnost <%= result.percentage %> %</p>
-                                                <% } else if (result.percentage > 89) { %>
-                                                    <p class="badge rounded-pill badge-green-outline mb-0">Úspěšnost <%= result.percentage %> %</p>
-                                                <% } else { %>
-                                                    <p class="badge rounded-pill badge-grey-outline mb-0">Úspěšnost <%= result.percentage %> %</p>
-                                                <% } %>
-                                            <% } %>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                    </div>
-                    </div>
-                <% }) %>
-        <% } %>
+              <!-- Right section: Date -->
+              <div
+                class="mt-3 mb-2 mb-sm-0 mt-md-0 mx-auto mx-md-0 text-center text-md-end"
+              >
+                <% if (result.type === "cards") { %> <% if (result.countTotal
+                === 1) { %>
+                <p class="badge rounded-pill badge-green-full mb-0">
+                  <%= result.countTotal %> kartička
+                </p>
+                <% } else if (result.countTotal > 1 && result.countTotal < 5){
+                %>
+                <p class="badge rounded-pill badge-green-full mb-0">
+                  <%= result.countTotal %> kartičky
+                </p>
+                <% } else { %>
+                <p class="badge rounded-pill badge-green-full mb-0">
+                  <%= result.countTotal %> kartiček
+                </p>
+                <% } %> <% } else { %> <% if (result.percentage === 100) { %>
+                <p class="badge rounded-pill badge-green-full mb-0">
+                  Úspěšnost <%= result.percentage %> %
+                </p>
+                <% } else if (result.percentage > 89) { %>
+                <p class="badge rounded-pill badge-green-outline mb-0">
+                  Úspěšnost <%= result.percentage %> %
+                </p>
+                <% } else { %>
+                <p class="badge rounded-pill badge-grey-outline mb-0">
+                  Úspěšnost <%= result.percentage %> %
+                </p>
+                <% } %> <% } %>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+    <% }) %> <% } %>
+  </div>
 </div>
 
 <script src="/js/jquery.min.js"></script>
