--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -147,10 +147,6 @@ form .form-borders.border-darkgrey {
   text-align: center;
 }
 
-.category-box i {
-  font-size: 4rem;
-}
-
 .category-box p {
   font-size: 1rem;
 }
@@ -250,6 +246,10 @@ form .form-borders.border-darkgrey {
   border: 1px solid #7ac705;
   color: white;
   margin: 16px 48px;
+}
+
+.shareIdSpan {
+  font-size: 3rem;
 }
 
 #document-progress-container {
