--- a/views/category.ejs
+++ b/views/category.ejs
@@ -423,7 +423,7 @@
         ></button>
       </div>
       <div class="modal-body">
-        <h3 class="text-center">Sdílej předmět s přáteli!</h3>
+        <h3 class="text-center">Sdílej předmět s přáteli</h3>
         <div>
           <div class="d-flex justify-content-center align-items-center">
             <span class="card border-grey m-3 px-5 py-3 shareIdSpan"><%= category.shareId %></span>  
