--- a/views/about.ejs
+++ b/views/about.ejs
@@ -28,13 +28,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;1,400&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-NNQ2L4K9C9"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W9NBWFYGZ1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-NNQ2L4K9C9');
+  gtag('config', 'G-W9NBWFYGZ1');
   gtag('config', 'AW-990983899');
 </script>
 <body class="d-flex flex-column vh-100">
