--- a/views/cards/finishedRandom.ejs
+++ b/views/cards/finishedRandom.ejs
@@ -23,12 +23,12 @@
                 </div>
                 <div class="row mb-3 mt-3">
                     <div class="col-12">
-                        <a href="/category/<%= category %>/randomCards" class="btn btn-danger">Generovat další náhodný balíček</a>
+                        <a href="/category/<%= categoryId %>/randomCards" class="btn btn-danger">Generovat další náhodný balíček</a>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <a href="/category/<%= category %>" class="">zpět na předmět</a>
+                        <a href="/category/<%= categoryId %>" class="">zpět na předmět</a>
                     </div>
                 </div>
             </div>
