--- a/views/category.ejs
+++ b/views/category.ejs
@@ -47,6 +47,7 @@
             <a
               href="/category/<%= category._id %>/randomCards"
               class="btn btn-sm btn-outline-danger mx-2"
+              style="border: none"
               ><i class="fas fa-random"></i></a
             >
             <% } %>
@@ -62,6 +63,7 @@
             <a
               href="/category/<%= category._id %>/testRandom"
               class="btn btn-sm btn-outline-danger mx-2"
+              style="border: none"
               ><i class="fas fa-random"></i></a
             >
             <% } %>
