--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,7 +53,7 @@
   <!-- Google tag (gtag.js) -->
   <script
     async
-    src="https://www.googletagmanager.com/gtag/js?id=G-NNQ2L4K9C9"
+    src="https://www.googletagmanager.com/gtag/js?id=G-W9NBWFYGZ1"
   ></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -62,7 +62,7 @@
     }
     gtag("js", new Date());
 
-    gtag("config", "G-NNQ2L4K9C9");
+    gtag("config", "G-W9NBWFYGZ1");
     gtag("config", "AW-990983899");
   </script>
   <body class="d-flex flex-column vh-100">
