--- a/views/invoices/showOne.ejs
+++ b/views/invoices/showOne.ejs
@@ -29,13 +29,13 @@
 </head>
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-NNQ2L4K9C9"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W9NBWFYGZ1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag() { dataLayer.push(arguments); }
   gtag('js', new Date());
 
-  gtag('config', 'G-NNQ2L4K9C9');
+  gtag('config', 'G-W9NBWFYGZ1');
   gtag('config', 'AW-990983899');
 </script>
 
