--- a/views/questions/show.ejs
+++ b/views/questions/show.ejs
@@ -30,13 +30,13 @@
 </head>
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-NNQ2L4K9C9"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W9NBWFYGZ1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag() { dataLayer.push(arguments); }
   gtag('js', new Date());
 
-  gtag('config', 'G-NNQ2L4K9C9');
+  gtag('config', 'G-W9NBWFYGZ1');
   gtag('config', 'AW-990983899');
 </script>
 
@@ -169,7 +169,7 @@
       <div class="row">
         <div class="col-lg-6 offset-lg-2" id="mini-menu">
           <div class="text-muted text-center text-small d-flex justify-content-center align-items-center mt-4">
-            <% if(currentUser && currentUser._id.toString() === section.author.toString()){ %>
+            <% if(currentUser && currentUser._id.toString() === section.author?.toString()){ %>
               <a href="#" target="_blank" class="text-muted mx-2" id="btn-upravit">Upravit otázku</a>
             <% } %>
           </div>
