--- a/views/auth/profile.ejs
+++ b/views/auth/profile.ejs
@@ -47,14 +47,6 @@
                     </div>
                     <hr />
                     <div class="col-4 fw-bold d-flex align-items-center">
-                        <p>Fakulta</p>
-                    </div>
-                    <div class="col-8 d-flex justify-content-between align-items-center">
-                        <p class=""><%= user.faculty %></p>
-                        <button type="button" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#modal-faculty" style="margin-bottom: 5px">Změnit</button>
-                    </div>
-                    <hr />
-                    <div class="col-4 fw-bold d-flex align-items-center">
                         <p>Počet nastudovaných kartiček</p>
                     </div>
                     <div class="col-8 d-flex align-items-center">
@@ -90,11 +82,7 @@
                         <div class="col-8">
                             <div class="d-flex justify-content-between align-items-center">
                                 <p class="mb-0">aktivní do <%= endDate %> </p>
-                                <% if((user.plan === "yearly" || user.plan === "halfyear") && user.premiumGrantedByAdmin !== true){ %>
-                                    <button type="button" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#modal-warning">
-                                        Správa předplatného
-                                    </button>
-                                <% } else if (user.subscriptionSource === "revenuecat"){ %>
+                                <% if (user.subscriptionSource === "revenuecat"){ %>
                                     <button class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#modal-revenuecat">
                                         Správa předplatného
                                     </button>
@@ -187,8 +175,6 @@
                 <div class="row p-3 pt-1">
                     <% if(user.invoices.length === 0  && user.invoicesDbObjects.length === 0){ %>
                         <p class="text-center text-muted">Zatím nemáš žádné potvrzení o platbách.</p>
-                        <p class="px-3 text-center text-small text-muted mt-3">Na tomto místě se zobrazují potvrzení o platbách od 1. 1. 2024. Potvrzení o předchozích platbách najdeš ve svém e-mailu. Vystavení potvrzení může trvat až tři pracovní dny.</p>
-
                     <% } else { %>
                         <table class="mx-3">
                             <tr>
@@ -203,49 +189,13 @@
                                         <td class="text-center"><%= invoice.dateIssued %></td>
                                     </tr>
                                 <% }) %>
-                                <% user.invoices.forEach((invoice, index) => { %>
-                                    <tr>
-                                        <% if(!invoice.isRequested){ %>
-                                            <td><a href="#" data-bs-toggle="modal" data-bs-target="#requestInvoiceModal<%= index %>"><%= invoice.invoiceNum %></a></td>
-                                        <% } else { %>
-                                            <td title="Vyžádána"><%= invoice.invoiceNum %></td>
-                                        <% } %>
-                                        <td class="text-center"><%= invoice.invoiceAmount %> Kč</td>
-                                        <td class="text-center"><%= invoice.invoiceDate %></td>
-                                    </tr>
-                                <% }) %>
                         </table>
-                        <p class="px-3 text-center text-small text-muted mt-3">Na tomto místě se zobrazují platby od 1. 1. 2024. Doklady o předchozích platbách najdeš ve svém e-mailu. Vystavení faktury může trvat až tři pracovní dny.</p>
                     <% } %>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-
-    <!-- Modal Warning YEAR to SHORTER PERIOD -->
-    <div class="modal fade" id="modal-warning" tabindex="-1" aria-labelledby="modalWarning" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-            <div class="modal-header">
-            <h5 class="modal-title">Upozornění</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-            <p>Chcete-li předplatné změnit na jiné platební obdobní, bude Vám při změně na kratší období nevyčerpaná hodnota předplatného přímo úměrná zůstatku období převedena na kredit, který bude poté možné použít k nákupu dalšího předplatného.</p>
-            <p>Chcete-li předplatné <b>zrušit</b>, zůstane Vám aktivní do konce předplaceného období.</p>
-            <p>Chcete opravdu pokračovat?</p>
-            </div>
-            <div class="modal-footer">
-            <button type="button" class="btn btn-sm btn-secondary" data-bs-dismiss="modal">Zavřít</button>
-            <button class="manage-billing-button btn btn-sm btn-danger" type="submit">
-                Pokračovat
-            </button>
-            </div>
-        </div>
-        </div>
-    </div>
 
     <!-- Modal REVENUECAT -->
     <div class="modal fade" id="modal-revenuecat" tabindex="-1" aria-labelledby="modalWarning" aria-hidden="true">
@@ -283,55 +233,6 @@
     </div>
 </div>
 
-<!-- MODAL - Delete user confirmation -->
-<% user.invoices.forEach((invoice, index) => { %>
-    <div class="modal fade" id="requestInvoiceModal<%= index %>" tabindex="-1">
-        <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Chcete zaslat fakturu na e-mail?</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-            </div>
-            <div class="modal-body d-flex justify-content-center align-items-center">
-                <a href="/invoice/request/<%= invoice.invoiceNum %>" class="btn btn-danger">Ano, vyžádat fakturu</a>
-            </div>
-        </div>
-        </div>
-    </div>
-<% }) %>
-
-<!-- Change faculty modal -->
-<div class="modal fade" id="modal-faculty" tabindex="-1" aria-labelledby="modalWarning" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
-        <div class="modal-header">
-        <h5 class="modal-title">Změnit fakultu</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <form action="/auth/user/changeFaculty" method="POST">
-            <div class="modal-body">
-                <select class="form-select" name="faculty" id="faculty">
-                    <option selected value="Neuvedeno">Neuvedeno</option>
-                    <option value="PrF UP">Studuji PrF UP</option>
-                    <option value="PrF UK">Studuji PrF UK</option>
-                    <option value="PrF MUNI">Studuji PrF MUNI</option>
-                    <option value="PrF ZČU">Studuji PrF ZČU</option>
-                    <option value="Jiná">Jiná</option>
-                    <option value="Uchazeč">Hlásím se ke studiu</option>
-                    <option value="Nestuduji">Již nestuduji</option>
-                </select>
-            </div>
-            <div class="modal-footer">
-            <button type="button" class="btn btn-sm btn-secondary" data-bs-dismiss="modal">Zavřít</button>
-            <button class="btn btn-sm btn-danger" type="submit">
-                Uložit
-            </button>
-            </div>
-        </form>
-    </div>
-    </div>
-</div>
-
 <!-- Set nickname modal -->
 <div class="modal fade" id="modal-nickname" tabindex="-1" aria-labelledby="modalWarning" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
@@ -356,7 +257,7 @@
     </div>
 </div>
 
-<!-- Set nickname modal -->
+<!-- Set dailyGoal modal -->
 <div class="modal fade" id="modal-dailyGoal" tabindex="-1" aria-labelledby="modalWarning" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
