--- a/views/admin/showUserDetail.ejs
+++ b/views/admin/showUserDetail.ejs
@@ -94,13 +94,27 @@
                     </div>
                     <hr />
                     <div class="col-4 fw-bold d-flex align-items-center">
-                        <p>Zbývající kredity</p>
+                        <p>Kredity - limit</p>
+                    </div>
+                    <div class="col-8 d-flex align-items-center">
+                        <%= user.creditsMonthlyLimit %> 
+                    </div>
+                    <hr />
+                    <div class="col-4 fw-bold d-flex align-items-center">
+                        <p>Kredity - zbývající měsíční</p>
                     </div>
                     <div class="col-8 d-flex align-items-center">
                         <%= user.credits %> 
+                    </div>
+                    <hr />
+                    <div class="col-4 fw-bold d-flex align-items-center">
+                        <p>Kredity - zbývající extra</p>
                         <% if (currentUser.admin) { %>
                             <a href="/admin/<%= user._id%>/addCredits?amount=100" class="btn btn-sm btn-outline-danger mx-3">+100</a>
-                           <% } %>
+                        <% } %>
+                    </div>
+                    <div class="col-8 d-flex align-items-center">
+                        <%= user.extraCredits %> 
                     </div>
                     <hr />
                     <div class="col-4 fw-bold d-flex align-items-center">
