--- a/views/auth/profile.ejs
+++ b/views/auth/profile.ejs
@@ -47,6 +47,21 @@
                     </div>
                     <hr />
                     <div class="col-4 fw-bold d-flex align-items-center">
+                        <p>Dostupné kredity (běžné)</p>
+                    </div>
+                    <div class="col-8 d-flex justify-content-between align-items-center">
+                        <%= user.credits %>
+                    </div>
+                    <hr />
+                    <div class="col-4 fw-bold d-flex align-items-center">
+                        <p>Dostupné kredity (extra)</p>
+                    </div>
+                    <div class="col-8 d-flex justify-content-between align-items-center">
+                        <%= user.extraCredits %>
+                        <button type="button" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="" style="margin-bottom: 5px">Navýšit</button>
+                    </div>
+                    <hr />
+                    <div class="col-4 fw-bold d-flex align-items-center">
                         <p>Počet nastudovaných kartiček</p>
                     </div>
                     <div class="col-8 d-flex align-items-center">
