--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -66,7 +66,7 @@
     </section>
     <section class="premium-packages">
         <div class="container">
-            <div class="row px-lg-5 px-2">
+            <div class="row px-lg-5 px-2 justify-content-center">
                 <div class="col-12 col-lg-3 price-table-wrapper p-0">
                     <div class="card premium-plan-card m-1 mt-0  ">
                         <div class="card-header">
@@ -210,100 +210,6 @@
                                     </div>
                                 </li>
                                 <li style="opacity: 0">placeholder</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-lg-3 mt-5 mt-lg-0 price-table-wrapper p-0">
-                    <div class="card premium-plan-card m-1 mt-0 premium-recomended  ">
-                        <div class="card-header">
-                            <div>
-                                <p class="card-header-title">Premium</p>
-                                <p class="card-header-period">půlroční</p>
-                            </div>
-                        </div>
-                        <div class="badge rounded-pill discount-badge"><span>ušetříš 35 %</span></div>
-                        <div class="price-tag-outer d-flex justify-content-center p-3 pt-0 pb-0">
-                            <div class="price-tag-inner">
-                                <span class="price">890 Kč</span> / <span class="period">půlročně</span>
-                            </div>
-                        </div> 
-                        <p class="text-center monthly-equivalent">(149 Kč za měsíc<sup>*</sup>)</p>
-                        <div class="px-3 d-flex justify-content-center premium-card-btn-div">
-                            <% if (!currentUser) { %>
-                                <a href="/auth/user/new?premium=true" class="btn btn-warning my-3 w-100">Zaregistrovat se a aktivovat</a> 
-                            <% } %>
-                            <% if (currentUser && !currentUser.isPremium) { %>
-                                <a href="#" id="checkout-button-halfyear" class="btn btn-warning my-3 w-100" style="min-width:115px">Aktivovat</a> 
-                            <% } %>
-                            <% if (currentUser && currentUser.isPremium) { %>
-                                <a href="#" class="btn btn-warning my-3 disabled w-100">Je aktivní balíček Premium</a> 
-                            <% } %>
-                        </div>
-                        <% if (currentUser && currentUser.premiumGrantedByAdmin) { %>
-                            <div>
-                                <p class="text-muted text-center" style="font-size: 0.8rem;">Tvé předplatné bylo nastaveno administrátorem. Přepnout na placenou verzi můžeš <a href="#" id="checkout-button-halfyear">zde</a>.</p> 
-                            </div>
-                        <% } %>
-                        <div class="height-85 premium-card-text premium-card-info-div">
-                            <p class="text-center my-3">Předplatné Premium se slevou za půlroční platbu.</p>
-                            <div class="px-2 color-1">
-                                <hr class="custom-hr">
-                            </div>
-                            <p class="text-center mt-4 mb-2 co-ziskas-text"><b>Co získáš?</b></p>
-                            <ul class="text-smaller premium-card-list">
-                                <li>
-                                    <div class="d-flex align-items-center">
-                                        <div>
-                                            <i class="fas fa-check-circle"></i>
-                                        </div>
-                                        <div class="px-2">
-                                            vše z balíčku Free
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="d-flex align-items-center">
-                                        <div>
-                                            <i class="fas fa-check-circle"></i>
-                                        </div>
-                                        <div class="px-2">
-                                            ušetříš 484 Kč<sup>**</sup>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="d-flex align-items-center">
-                                        <div>
-                                            <i class="fas fa-check-circle"></i>
-                                        </div>
-                                        <div class="px-2">
-                                            dalších 3 000+ kartiček
-                                        </div>
-                                    </div>
-                                </li>
-                                
-                                <li>
-                                    <div class="d-flex align-items-center">
-                                        <div>
-                                            <i class="fas fa-check-circle"></i>
-                                        </div>
-                                        <div class="px-2">
-                                            testové otázky bez limitu
-                                        </div>
-                                    </div>
-                                </li>
-                                
-                                <li>
-                                    <div class="d-flex align-items-center">
-                                        <div>
-                                            <i class="fas fa-check-circle"></i>
-                                        </div>
-                                        <div class="px-2">
-                                            funkce ukládání kartiček
-                                        </div>
-                                    </div>
-                                </li>
                             </ul>
                         </div>
                     </div>
