--- a/views/auth/register_form.ejs
+++ b/views/auth/register_form.ejs
@@ -70,8 +70,9 @@
                             <option value="odjinud">Odjinud</option>
                           </select>
                     </div>
-
-
+                    <div>
+                        <input type="text" name="school" style="display:none;" tabindex="-1" autocomplete="off">
+                    </div>
                     <div class="mt-3">
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="vop" id="vop" required>
