--- a/views/legal/contact.ejs
+++ b/views/legal/contact.ejs
@@ -69,6 +69,9 @@
                                 <div class="form-group">
                                     <textarea class="form-control form-borders mt-3" id="text" name="text" rows="6" placeholder="Zpráva" required></textarea>
                                 </div>
+                                <div>
+                                    <input type="text" name="school" style="display:none;" tabindex="-1" autocomplete="off">
+                                </div>
                                 <div class="d-flex justify-content-end">
                                     <button type="submit" class="btn btn-danger mt-3">Odeslat zprávu</button>
                                 </div>
