remove separate questions from cards route

--- a/views/legal/feedback.ejs
+++ b/views/legal/feedback.ejs
@@ -29,6 +29,9 @@
                                 <div class="form-group">
                                     <textarea class="form-control mt-2" id="text" name="text" rows="10" placeholder="Tvé nápady a připomínky..." required></textarea>
                                 </div>
+                                <div>
+                                    <input type="text" name="school" style="display:none;" tabindex="-1" autocomplete="off">
+                                </div>
                                 <button type="submit" class="btn btn-danger mt-3">Odeslat feedback</button>
                             </form>
                         </div>
