--- a/views/payments/success.ejs
+++ b/views/payments/success.ejs
@@ -6,7 +6,7 @@
                 <h3>Premium je aktivní</h3>
                 <p class="my-4"><i class="fas fa-check-circle green-check"></i></p>
                 <h5>Děkujeme!</h5>
-                <p class="mt-3">Nyní můžeš využívat výhod <span class="color-1" style="font-weight: bold;">InLege</span> naplno!</p>
+                <p class="mt-3">Nyní můžeš využívat výhod <span class="color-1" style="font-weight: bold;">Edookio</span> naplno!</p>
                 <div class="d-flex justify-content-center mt-3">
                     <a href="/" class="btn btn-lg btn-danger w-50">Jdeme na to!</a>
                 </div>
