seed data for new users

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -423,7 +423,7 @@
                 <button type="submit" class="btn btn-danger">Přidat předmět</button>
               </div>
             </form>
-            <p class="text-center text-muter text-smaller mt-2">Ostatní studenti ti mohou dát kód, prostřednictvím kterého si můžeš přidat jejich předměty</p>
+            <p class="text-center text-muted mt-4 mx-5">Ostatní studenti ti mohou dát kód, prostřednictvím kterého si můžeš přidat jejich předměty</p>
           </div>
         </div>
       </div>
